src/objects/Xero_Token__c.object
<CustomObject>
    <fields>
        <fullName>IsAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Xero_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Service__c</fullName>
        <label>Xero Service</label>
        <referenceTo>Xero_Service__c</referenceTo>
        <relationshipLabel>Xero Tokens</relationshipLabel>
        <relationshipName>Xero_Tokens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Xero Token</label>
    <nameField>
        <label>Xero Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>